# nightshade

./: README.md  flake.nix  pyproject.toml
nightshade/: __init__.py  csv.py  models.py  movie.py  nirvana.py  notion.py  rottentomatoes.py  search.py  tmdb.py  util.py
