[tool.poetry]
name = "nightshade"
version = "0.1.0"
description = "Tools for retrieving movie data from Rotten Tomatoes"
authors = ["Roni Choudhury <aichoudh@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
