[tool.poetry]
name = "nightshade"
version = "0.1.0"
description = "Tools for retrieving movie data from Rotten Tomatoes"
authors = ["Roni Choudhury <aichoudh@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
nltk = "^3.6.5"
pydantic = "^1.8.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
black = "21.7b"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
mypy = "^0.920"
types-requests = "^2.26.2"
types-beautifulsoup4 = "^4.10.5"
taskipy = "^1.9.0"

[tool.poetry.scripts]
nightshade = "nightshade:nightshade"

[tool.taskipy.tasks]
format = "black nightshade/"
lint = "flake8 --max-line-length=88"
typecheck = "mypy --ignore-missing-imports --follow-imports=skip --strict-optional --disallow-untyped-defs ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
